tooling/nargo_cli/tests/snapshots/execute__tests__global_consts_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9650324488153429691",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      },
      {
        "name": "c",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "public"
      },
      {
        "name": "d",
        "type": {
          "kind": "array",
          "length": 5,
          "type": {
            "kind": "field"
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "12049594436772143978": {
        "error_kind": "string",
        "string": "array ref-count underflow detected"
      },
      "16761564377371454734": {
        "error_kind": "string",
        "string": "Array index out of bounds"
      },
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1cO4wjRRBtf8b2jM/r5Y7/d/n/YcaftZeDY7nbT0BGSObbT0CGRIo0EQkREhESEhEZEQRkSCRkpCQEZEgkICER43fbZZfLZXv3dvpWdbqWVj2erql6/bq6u/pzV3InaX/8V/LPVZHj/YabTSS77fP0fCkrUFcaCmPJAMayAYwVAxirBjBGBjDWDGCsG8DYMIAxNoAxMYCxaQDjJQMYWwYwrhnA2DaAcd0AxvsMYLxsAOMVAxjvN4DxAQMYHzSA8SEDGB82gPERAxgfNYDxMQMYHzeA8QkDGJ80gPGpAjHeib3IDQOcPm0A4zMGMD5rAONzBjA+bwDjCwYwvmgA40sGML5sAOMrBjC+agDjawYwvm4A4xsGML5pAGNqAGNmAGPHAMauAYw9Axj7BjBuGsA4MIBxaADjlgGMbxnAeNUAxrcNYHzHAMZrBjC+WyBGYKu42VQ03m0DnL5nAOP1gts9cmHb/YYBTncMYNw1gHHPAMb9ABhvpV32DNBldzKo4gIuOhkukOKCJi5A4oIhLvDhghwuoOGCFy5Q4YLS+vgPF2xwgQUXRHABAxcccIEAB/Q4AMcBMw5wcUCKA0gc8OEADQdUG+M/HKrg0AKHAth0x6Y2No2xKYtNT2wqYtMOm2LYdMKmDjZNsCmBWmFRjUUrFoVYdGFRg0UDgnIEvQgqEbQhKELQgUkdkyYmJXT4Hc8HHGLfTSeX7fEfBtnrbj5RQ//n89jnZVZe4IXrLBZ2i9Q/TIfHsVK/AvF3Y68zCqK/NyT9tTD407rXs59P9fO61JgflFyoduoNwtazk7ZE3RyrC9muh7GdlYQ956Z9kZeR/cSF9KmTf3jC7REeyQ/1+RbJ5FM8JVFWzefrQWURK6P2xfh7lclJ3yIc1DYhxp9hunnP75wtv5Nl1Xy+Hmf1O+5b0u8qAbgYz0uB/S7tXpzfpb270e8qoqyaz9fjrH7HOZF+Vw3AxdjvRoH9rn+Bfrd5N/pdVZRV8/l6nNXvuG9FTG6PPb/vn8PGfSfxeaj5HemKgp/bQqrnbpLIXyrsHfFKPDe4vCiLWVk1n7WT+N9VZofrIhyRkKc1bdvnNfYNfb+u2K8J+zO4lXeSl1iRjxV5+No1/4y1NK25buRTfUWvuZB2wujvk/7dIPo7KenfC4N/hDZAH/7L62u7+TGfxoDAY3JKfa/h9ZHvS5uErSzk+TNSJN594HP8/od9w3U6ZpO/I/9dd/PjYm0Jd5O+oGANwV2scNdYwh3fU4kV7ujdh6447iqn5E76XRyYu8TNcxcv4S5hZfTMuaN3N11x3N2u3yWBuWsq3CVLuGuyMnrm3NG7j1xx3Gl+F3rPLFbqWJDuyX7ipTDYMxmfc56Qfyzag8boyOmxK83xkZD/nen8xD+3hAzZ0XLn5mN3JNn+XNdOPmunUaAdrovigrBjWLa1qq0+Ze9539TaiuOUY9lvTGfun9tK3YjrsDFDNjzt2F1fUJ/PBM5WEJxpepnpdcJWW+GIz9mrYiIkig9lzPO5qF+oOVSrH9kqsi9rcZQrrh6ZHCu4rVV97Av2nn+3aDyksUG22c9M55f+mXyEr7tkH+O4CuQkleM7j0G0/VA5vn8lcIaKgTUfbAjbhLdAfvramQT3i6/Ze8lTRXyLtJPP8kjyPzCd3widvF4Vxi3JUIzQdvNY+bf8d6TINkUZyX7r85B7kovaWK4TSmFsd0rC3iKuS4LrsoJVykaKrOSaZL9zF8/1afwOiWK+UH73veAixBnMIi7IVtMFX0f05RisjR3cvhyDf/Q5xsN/mTz/xjGd3E/LQl7bo64JGSRqcz4vyRhA4uWy0h9I9iefh96P0tq8LuoZKVxweRp3l51b8zmCOGsoNsOu5TuTeX5yRuD0tQFfO3D5X3yu+ViyhCck6WMtRT5RuNPWHpP9dfE7FF9rK/jifHL5X5fwpdW/vISvNUW+tYQvziX/VsPLuU2EXe3OV0PRpcXVsdDVUOrAeZR9KVJs8jhcW4/TOknDEwk8yTnwJAwPrb0Dx79d2SaL/JGvS7j8Hz7X/FFrGz7PS3+MFXleb+mPml8swstlZVxAsn/6/CLXvcvmy9P6EX3L99sme/x58XUaDE/We7ew5lNueVs7YT8S8n/733ysoPw8/7nt8WCUHXdHx6P+6PCwdzCS3CORHzYD2B8NusODTu9gcLPfHXU377j9o+HWYbp1fDTKsqxzmB6tsv8/jhg4FmFbAAA=",
  "debug_symbols": "zZrbbuIwEIbfJde58IwPM8OrrFYVh1BFQoA4rLRCvHsTSghN0qK4HeobRMDf51+x4yS2T9mimB1fX8r1crPPJn9O2Woznx7Kzbo6Op3zbLYrV6vy9eX+58zUHwD2Auy303V9vD9Md4dswsbmWbFeVN/QVIJluSqyibfnv3mFhCEEAMOVqb5SD6IYiGMgiYDQxEAQA/lhKLgbFKQHfXIixN4g8T1o+ESg8w2EHruQNTEQxEAYA9kYyMVAw+2E4da4SLYHhRiIYiCOgYZ7hLXQQNZ96LB5rzCCyLUwovHRhes4zqQVB9KKg2nF8c+NA0I3szC0hd/T8LPTSHNhocHQTaN6XdU1eKNeA6jXgOo1WPUahsdqae/ewuZBV3K3Ifr+roMXfxhuZ+G29xl84If2SYLboubdD8p+/Em/9z2/VfY7Zb9X9gfl9iVlPyv7Rff8k1H2g7Jf+folq9u+5JT9ytcvBWU/KftZ18/m+/dfMk1Zct37L4OyH5X9VtnvlP1e2R+U/fSTfrE9Pyv7RdcvRtkPyn6X0luwPPmdvBq823EcbDdNSCoNJZWGk0ojCaWp/kwqDSSV5tmTgAaonefy3TQ2qTQuqTQ+qTQhqTSUVBpOKs2vjsX3M9n9skTN+iJxZ84bwTz7SeiLGXgESCoNJpXGj188xs8W+b+GKAIaXnpny1eGHfYQGI/geMSOR9x4xI9HwniEHiDUR3g8IqMRa8Yjg60vvnnFE+YPyLk6+jfdldPZqrhuiFke1/O7/TGH/9uis1Vmu9vMi8VxV9SbZtr9MnWX8JIHqR+j6+hoXY72cljHQmdydFjVWdX7Bg==",
  "file_map": {
    "5": {
      "source": "use crate::meta::derive_via;\n\n#[derive_via(derive_eq)]\n// docs:start:eq-trait\npub trait Eq {\n    fn eq(self, other: Self) -> bool;\n}\n// docs:end:eq-trait\n\n// docs:start:derive_eq\ncomptime fn derive_eq(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn eq(_self: Self, _other: Self) -> bool };\n    let for_each_field = |name| quote { (_self.$name == _other.$name) };\n    let body = |fields| {\n        if s.fields_as_written().len() == 0 {\n            quote { true }\n        } else {\n            fields\n        }\n    };\n    crate::meta::make_trait_impl(\n        s,\n        quote { Eq },\n        signature,\n        for_each_field,\n        quote { & },\n        body,\n    )\n}\n// docs:end:derive_eq\n\nimpl Eq for Field {\n    fn eq(self, other: Field) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for u128 {\n    fn eq(self, other: u128) -> bool {\n        self == other\n    }\n}\nimpl Eq for u64 {\n    fn eq(self, other: u64) -> bool {\n        self == other\n    }\n}\nimpl Eq for u32 {\n    fn eq(self, other: u32) -> bool {\n        self == other\n    }\n}\nimpl Eq for u16 {\n    fn eq(self, other: u16) -> bool {\n        self == other\n    }\n}\nimpl Eq for u8 {\n    fn eq(self, other: u8) -> bool {\n        self == other\n    }\n}\nimpl Eq for u1 {\n    fn eq(self, other: u1) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for i8 {\n    fn eq(self, other: i8) -> bool {\n        self == other\n    }\n}\nimpl Eq for i16 {\n    fn eq(self, other: i16) -> bool {\n        self == other\n    }\n}\nimpl Eq for i32 {\n    fn eq(self, other: i32) -> bool {\n        self == other\n    }\n}\nimpl Eq for i64 {\n    fn eq(self, other: i64) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for () {\n    fn eq(_self: Self, _other: ()) -> bool {\n        true\n    }\n}\nimpl Eq for bool {\n    fn eq(self, other: bool) -> bool {\n        self == other\n    }\n}\n\nimpl<T, let N: u32> Eq for [T; N]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T; N]) -> bool {\n        let mut result = true;\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<T> Eq for [T]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T]) -> bool {\n        let mut result = self.len() == other.len();\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<let N: u32> Eq for str<N> {\n    fn eq(self, other: str<N>) -> bool {\n        let self_bytes = self.as_bytes();\n        let other_bytes = other.as_bytes();\n        self_bytes == other_bytes\n    }\n}\n\nimpl<A, B> Eq for (A, B)\nwhere\n    A: Eq,\n    B: Eq,\n{\n    fn eq(self, other: (A, B)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1)\n    }\n}\n\nimpl<A, B, C> Eq for (A, B, C)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n{\n    fn eq(self, other: (A, B, C)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2)\n    }\n}\n\nimpl<A, B, C, D> Eq for (A, B, C, D)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n{\n    fn eq(self, other: (A, B, C, D)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2) & self.3.eq(other.3)\n    }\n}\n\nimpl<A, B, C, D, E> Eq for (A, B, C, D, E)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n    E: Eq,\n{\n    fn eq(self, other: (A, B, C, D, E)) -> bool {\n        self.0.eq(other.0)\n            & self.1.eq(other.1)\n            & self.2.eq(other.2)\n            & self.3.eq(other.3)\n            & self.4.eq(other.4)\n    }\n}\n\nimpl Eq for Ordering {\n    fn eq(self, other: Ordering) -> bool {\n        self.result == other.result\n    }\n}\n\n// Noir doesn't have enums yet so we emulate (Lt | Eq | Gt) with a struct\n// that has 3 public functions for constructing the struct.\npub struct Ordering {\n    result: Field,\n}\n\nimpl Ordering {\n    // Implementation note: 0, 1, and 2 for Lt, Eq, and Gt are built\n    // into the compiler, do not change these without also updating\n    // the compiler itself!\n    pub fn less() -> Ordering {\n        Ordering { result: 0 }\n    }\n\n    pub fn equal() -> Ordering {\n        Ordering { result: 1 }\n    }\n\n    pub fn greater() -> Ordering {\n        Ordering { result: 2 }\n    }\n}\n\n#[derive_via(derive_ord)]\n// docs:start:ord-trait\npub trait Ord {\n    fn cmp(self, other: Self) -> Ordering;\n}\n// docs:end:ord-trait\n\n// docs:start:derive_ord\ncomptime fn derive_ord(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn cmp(_self: Self, _other: Self) -> std::cmp::Ordering };\n    let for_each_field = |name| quote {\n        if result == std::cmp::Ordering::equal() {\n            result = _self.$name.cmp(_other.$name);\n        }\n    };\n    let body = |fields| quote {\n        let mut result = std::cmp::Ordering::equal();\n        $fields\n        result\n    };\n    crate::meta::make_trait_impl(s, quote { Ord }, signature, for_each_field, quote {}, body)\n}\n// docs:end:derive_ord\n\n// Note: Field deliberately does not implement Ord\n\nimpl Ord for u128 {\n    fn cmp(self, other: u128) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\nimpl Ord for u64 {\n    fn cmp(self, other: u64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u32 {\n    fn cmp(self, other: u32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u16 {\n    fn cmp(self, other: u16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u8 {\n    fn cmp(self, other: u8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i8 {\n    fn cmp(self, other: i8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i16 {\n    fn cmp(self, other: i16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i32 {\n    fn cmp(self, other: i32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i64 {\n    fn cmp(self, other: i64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for () {\n    fn cmp(_self: Self, _other: ()) -> Ordering {\n        Ordering::equal()\n    }\n}\n\nimpl Ord for bool {\n    fn cmp(self, other: bool) -> Ordering {\n        if self {\n            if other {\n                Ordering::equal()\n            } else {\n                Ordering::greater()\n            }\n        } else if other {\n            Ordering::less()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl<T, let N: u32> Ord for [T; N]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T; N]) -> Ordering {\n        let mut result = Ordering::equal();\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<T> Ord for [T]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T]) -> Ordering {\n        let mut result = self.len().cmp(other.len());\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<A, B> Ord for (A, B)\nwhere\n    A: Ord,\n    B: Ord,\n{\n    fn cmp(self, other: (A, B)) -> Ordering {\n        let result = self.0.cmp(other.0);\n\n        if result != Ordering::equal() {\n            result\n        } else {\n            self.1.cmp(other.1)\n        }\n    }\n}\n\nimpl<A, B, C> Ord for (A, B, C)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n{\n    fn cmp(self, other: (A, B, C)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D> Ord for (A, B, C, D)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n{\n    fn cmp(self, other: (A, B, C, D)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D, E> Ord for (A, B, C, D, E)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n    E: Ord,\n{\n    fn cmp(self, other: (A, B, C, D, E)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        if result == Ordering::equal() {\n            result = self.4.cmp(other.4);\n        }\n\n        result\n    }\n}\n\n// Compares and returns the maximum of two values.\n//\n// Returns the second argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::max(1, 2), 2);\n// assert_eq(cmp::max(2, 2), 2);\n// ```\npub fn max<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v1\n    } else {\n        v2\n    }\n}\n\n// Compares and returns the minimum of two values.\n//\n// Returns the first argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::min(1, 2), 1);\n// assert_eq(cmp::min(2, 2), 2);\n// ```\npub fn min<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v2\n    } else {\n        v1\n    }\n}\n\nmod cmp_tests {\n    use crate::cmp::{max, min};\n\n    #[test]\n    fn sanity_check_min() {\n        assert_eq(min(0 as u64, 1 as u64), 0);\n        assert_eq(min(0 as u64, 0 as u64), 0);\n        assert_eq(min(1 as u64, 1 as u64), 1);\n        assert_eq(min(255 as u8, 0 as u8), 0);\n    }\n\n    #[test]\n    fn sanity_check_max() {\n        assert_eq(max(0 as u64, 1 as u64), 1);\n        assert_eq(max(0 as u64, 0 as u64), 0);\n        assert_eq(max(1 as u64, 1 as u64), 1);\n        assert_eq(max(255 as u8, 0 as u8), 255);\n    }\n}\n",
      "path": "std/cmp.nr"
    },
    "50": {
      "source": "pub fn from_baz(x: [Field; crate::foo::MAGIC_NUMBER]) {\n    for i in 0..crate::foo::MAGIC_NUMBER {\n        assert(x[i] == crate::foo::MAGIC_NUMBER as Field);\n    }\n}\n",
      "path": ""
    },
    "52": {
      "source": "mod bar;\n\nglobal N: u32 = 5;\nglobal MAGIC_NUMBER: u32 = 3;\nglobal TYPE_INFERRED: u32 = 42;\n\npub fn from_foo(x: [Field; bar::N]) {\n    for i in 0..bar::N {\n        assert(x[i] == bar::N as Field);\n    }\n}\n",
      "path": ""
    },
    "53": {
      "source": "mod foo;\nmod baz;\n\nglobal M: u32 = 32;\nglobal L: Field = 10; // Unused globals currently allowed\nglobal N: u32 = 5;\nglobal T_LEN: u32 = 2;\n\n// Globals can reference other globals\nglobal DERIVED: Field = M as Field + L;\n\nstruct Dummy {\n    x: [Field; N],\n    y: [Field; foo::MAGIC_NUMBER],\n}\n\nstruct Test {\n    v: Field,\n}\nglobal VALS: [Test; 1] = [Test { v: 100 }];\nglobal NESTED: [[Test; 1]; 2] = [VALS, VALS];\n\nunconstrained fn calculate_global_value() -> Field {\n    42\n}\n\n// Regression test for https://github.com/noir-lang/noir/issues/4318\nglobal CALCULATED_GLOBAL: Field = calculate_global_value();\n\nfn main(\n    a: [Field; M + N - N],\n    b: [Field; 30 + N / 2],\n    c: pub [Field; foo::MAGIC_NUMBER],\n    d: [Field; foo::bar::N],\n) {\n    let test_struct = Dummy { x: d, y: c };\n\n    for i in 0..foo::MAGIC_NUMBER {\n        assert(c[i] == foo::MAGIC_NUMBER as Field);\n        assert(test_struct.y[i] == foo::MAGIC_NUMBER as Field);\n        assert(test_struct.y[i] != NESTED[1][0].v);\n    }\n\n    assert(N as Field != M as Field);\n\n    let expected: u32 = 42;\n    assert(foo::TYPE_INFERRED == expected);\n\n    let mut y = 5;\n    let mut x = M;\n    for i in 0..N * N {\n        let M: u32 = 10;\n        x = M;\n\n        y = i;\n    }\n    assert(y == 24);\n    assert(x == 10);\n\n    let q = multiplyByM(3);\n    assert(q == 96);\n\n    arrays_neq(a, b);\n\n    let t: [Field; T_LEN] = [N as Field, M as Field];\n    assert(t[1] == 32);\n\n    assert(15 == my_submodule::my_helper());\n\n    let add_submodules_N = my_submodule::N as Field + foo::bar::N as Field;\n    assert(15 == add_submodules_N);\n    let add_from_bar_N = my_submodule::N as Field + foo::bar::from_bar(1);\n    assert(15 == add_from_bar_N);\n    // Example showing an array filled with (my_submodule::N + 2) 0's\n    let sugared = [0; my_submodule::N + 2];\n    assert(sugared[my_submodule::N + 1] == 0);\n\n    let arr: [Field; my_submodule::N] = [N as Field; 10];\n    assert((arr[0] == 5) & (arr[9] == 5));\n\n    foo::from_foo(d);\n    baz::from_baz(c);\n    assert(DERIVED == M as Field + L);\n\n    assert(CALCULATED_GLOBAL == 42);\n}\n\nfn multiplyByM(x: Field) -> Field {\n    x * M as Field\n}\n\nfn arrays_neq(a: [Field; M], b: [Field; M]) {\n    assert(a != b);\n}\n\nmod my_submodule {\n    global N: u32 = 10;\n    global L: Field = 50;\n\n    fn my_bool_or(x: u1, y: u1) {\n        assert(x | y == 1);\n    }\n\n    pub fn my_helper() -> Field {\n        let N: u32 = 15; // Like in Rust, local variables override globals\n        let x = N as Field;\n        x\n    }\n}\n\nstruct Foo {\n    a: Field,\n}\n\nstruct Bar {}\n\nimpl Bar {\n    fn get_a() -> Field {\n        1\n    }\n}\n\n// Regression for #1440\nglobal foo: Foo = Foo { a: Bar::get_a() };\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
